add packages, add redux store

--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,134 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+@import '@flaticon/flaticon-uicons/css/all/all.css';
+@import 'react-toastify/dist/ReactToastify.css';
+@import 'react-datepicker/dist/react-datepicker.css';
+@import 'quill/dist/quill.snow.css';
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+*,
+*::before,
+*::after {
+  @apply scroll-smooth outline-none transition-all duration-75;
+  @apply disabled:opacity-50 disabled:cursor-default disabled:pointer-events-none;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  @apply font-sans leading-normal;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+a {
+  @apply no-underline font-medium;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.icon {
+  @apply size-[1.5em] inline-flex justify-center items-center;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@layer utilities {
+  .disabled {
+    @apply opacity-50 cursor-default pointer-events-none;
   }
-  a:hover {
-    color: #747bff;
+
+  .px-resp {
+    @apply px-4 sm:px-6 md:px-8 lg:px-10 xl:px-12;
   }
-  button {
-    background-color: #f9f9f9;
+  .py-resp {
+    @apply py-4 sm:py-6 md:py-8 lg:py-10 xl:py-12;
+  }
+  .p-resp {
+    @apply px-resp py-resp;
+  }
+}
+
+@layer components {
+  .cont {
+    @apply container mx-auto px-resp;
+  }
+
+  .btn {
+    @apply h-field px-field cursor-pointer rounded border-field border-transparent font-medium;
+    @apply inline-flex justify-center items-center gap-3;
+    @apply focus:ring;
+  }
+  .btn-sm {
+    @apply h-field-sm px-field-sm;
+  }
+  .btn-md {
+    @apply h-field-md px-field-md;
+  }
+  .btn-lg {
+    @apply h-field-lg px-field-lg;
+  }
+  .btn-xl {
+    @apply h-field-xl px-field-xl;
+  }
+
+  .btn-icon {
+    @apply p-0 aspect-square rounded-full;
+  }
+
+  .label {
+    @apply block font-medium;
+  }
+
+  .input {
+    @apply h-field px-field rounded bg-white border-field;
+    @apply focus:ring;
+  }
+  .input-err {
+    @apply border-red-500;
+  }
+
+  .input-btn {
+    @apply absolute top-1/2 right-3 -translate-y-1/2;
+    @apply btn btn-icon h-icon text-slate-500;
+    @apply hover:text-black focus:text-black;
+  }
+
+  .radio-label {
+    @apply h-field px-field cursor-pointer rounded bg-white border-field;
+    @apply inline-flex justify-center items-center gap-3;
+    @apply hover:bg-slate-100;
+  }
+  .radio-label::before {
+    content: '';
+    @apply size-[0.75em] rounded-full border-field;
+  }
+  .radio-label-focused {
+    @apply ring;
+  }
+  .radio-label-checked {
+    @apply border-black;
+  }
+  .radio-label-checked::before {
+    @apply bg-black;
+  }
+  .radio-label-err {
+    @apply border-red-500;
+  }
+
+  .spinner {
+    @apply inline-flex size-[1em] rounded-full;
+    @apply border-t-[3px] border-t-current border-r-[3px] border-r-transparent;
+    @apply animate-spin;
+  }
+
+  .dd-cont {
+    @apply absolute z-10 min-w-full mt-3 p-3;
+    @apply rounded bg-white shadow-smooth animate-float-in;
+  }
+  .dd-list {
+    @apply flex flex-col gap-1;
+  }
+  .dd-item {
+    @apply btn text-slate-500 justify-start;
+    @apply text-nowrap text-sm;
+  }
+  .dd-icon {
+    @apply mr-[0.5em];
   }
 }
